--- a/Topics/01. Introduction-to-Programming/slides/index.html
+++ b/Topics/01. Introduction-to-Programming/slides/index.html
@@ -75,6 +75,9 @@
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/reveal.js"></script>
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/lib/js/jquery.js"></script>
   <script src="https://cdn.rawgit.com/TelerikAcademy/Common/master/revealjs-theme/lib/js/jquery.js"></script>
+
+  <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/main.js"></script>
+
   <script src="https://cdn.rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/setup-func.js"></script>
   <!-- <script src="js/setup-func.js"></script> -->
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/render.js"></script>
