--- a/Topics/02. Data-Types-and-Variables/slides/index.html
+++ b/Topics/02. Data-Types-and-Variables/slides/index.html
@@ -40,6 +40,9 @@
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/reveal.js"></script>
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/lib/js/jquery.js"></script>
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/lib/js/jquery.js"></script>
+
+  <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/main.js"></script>
+
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/setup-func.js"></script>
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/render.js"></script>
   <script>
