--- a/Topics/01. Introduction-to-Programming/slides/index.html
+++ b/Topics/01. Introduction-to-Programming/slides/index.html
@@ -28,46 +28,15 @@
   <!--[if lt IE 9]>
     <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/lib/js/html5shiv.js"></script>
   <![endif]-->
-
-
-  <style media="screen">
-    #loading {
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      z-index: 100;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(30, 30, 30, 0.9);
-      /*background-image: url("http://i.stack.imgur.com/MnyxU.gif");*/
-      background-image: url(https://cdn.rawgit.com/TelerikAcademy/Common/master/revealjs-theme/css/imgs/logo.png);
-      background-repeat: no-repeat;
-      background-size: 25%;
-      background-position: 50% 43%;
-      background-repeat: no-repeat;
-    }
-
-    #loading div {
-      position: absolute;
-      height: 100%;
-      width: 100%;
-      background-repeat: no-repeat;
-      background-position: 50% 57%;
-      background-repeat: no-repeat;
-      background-image: url(https://cdn.rawgit.com/TelerikAcademy/Common/master/revealjs-theme/css/imgs/gears.gif);
-      background-size: 8%;
-    }
-  </style>
-
 </head>
 
 <body>
-  <div id="loading">
-    <div></div>
-  </div>
-
-  <div class="reveal" id="presentation">
+  <div class="reveal">
+      <div class="home-btn">
+          <a href="http://example.com">
+            <img src="http://codeitdown.com/media/Home_Icon.svg" alt="Home"/>
+          </a>
+        </div>
     <div id="slides-container" class="slides">
     </div>
   </div>
