--- a/Topics/01. Introduction-to-Programming/slides/index.html
+++ b/Topics/01. Introduction-to-Programming/slides/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <title>Introduction to Programming: C# Fundamentals</title>
@@ -9,14 +8,11 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
-
   <link rel="stylesheet" href="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/css/reveal.css">
   <link rel="stylesheet" href="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/css/theme/black.css" id="theme">
   <link rel="stylesheet" href="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/css/theme/telerik-academy-dark.css">
-
   <!-- Code syntax highlighting -->
   <link rel="stylesheet" href="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/lib/css/github.css">
-
   <!-- Printing and PDF exports -->
   <script>
     var link = document.createElement('link');
@@ -29,24 +25,21 @@
     <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/lib/js/html5shiv.js"></script>
   <![endif]-->
 </head>
-
 <body>
   <div class="reveal">
-      <div class="home-btn">
-          <a href="http://example.com">
-            <img src="http://codeitdown.com/media/Home_Icon.svg" alt="Home"/>
-          </a>
-        </div>
-    <div id="slides-container" class="slides">
+
+    <div class="home-btn">
+        <a href = "https://github.com/TelerikAcademy/CSharp-Part-1" >
+            <img src="https://raw.githubusercontent.com/TelerikAcademy/Common/master/icons/home-icon.png" alt="Home" />
+        </a>
     </div>
+    <div id="slides-container" class="slides"></div>
   </div>
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/lib/js/head.min.js"></script>
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/reveal.js"></script>
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/lib/js/jquery.js"></script>
   <script src="https://cdn.rawgit.com/TelerikAcademy/Common/master/revealjs-theme/lib/js/jquery.js"></script>
-
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/main.js"></script>
-
   <script src="https://cdn.rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/setup-func.js"></script>
   <!-- <script src="js/setup-func.js"></script> -->
   <script src="https://rawgit.com/TelerikAcademy/Common/master/revealjs-theme/js/render.js"></script>
@@ -56,14 +49,11 @@
       pathname = window.location.pathname.substring(0, window.location.pathname.indexOf('index.html')),
       host = window.location.host,
       readmeLocation = protocol + "//" + host + pathname;
-
     if (readmeLocation[readmeLocation.length - 1] !== '/') {
       readmeLocation += '/';
     }
     readmeLocation += 'README.md';
-
     render(readmeLocation);
   </script>
 </body>
-
 </html>
